# parallel-packed-csr

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/modules/: clang-format.cmake
data/: shuffled_higgs.txt
src/: .clang-format  CMakeLists.txt  benchmark.sh  main.cpp
src/benchmarking/: benchmark-partitioning.sh  benchmark-strong-scaling.sh
src/pcsr/: PCSR.cpp  PCSR.h
src/pppcsr/: PPPCSR.cpp  PPPCSR.h
src/thread_pool/: thread_pool.cpp  thread_pool.h
src/thread_pool_pppcsr/: thread_pool_pppcsr.cpp  thread_pool_pppcsr.h
src/utility/: atomicops.h  bfs.h  concurrentqueue.h  fastLock.h  hybridLock.h  pagerank.h  readerwriterqueue.h  task.h
src/utility/atomic_queue/: atomic_queue.h  atomic_queue_mutex.h  barrier.h  defs.h  spinlock.h
test/: DataStructureTest.cpp  DataStructureTest.h  SchedulerTest.cpp  SchedulerTest.h
